# collaborative-filtering-py

./: .cursorrules  .gitignore  pyproject.toml  readme.md
src/: main.py
src/utils/: logger.py  matrix.py  save.py
