[tool.poetry]
version = "0.1.0"
readme = "readme.md"
name = "collaborative-filtering-py"
description = "Collaborative filtering from scratch"
authors = ["elamribadrayour <badrayour.elamri@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
scipy = "^1.14.1"
typer = "^0.12.5"

[tool.poetry.group.ci.dependencies]
mypy = "^1.13.0"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true